# ai-studio

./: .gitignore  README.md  pyproject.toml
.cursor/: context.md  rules.md
.kiro/specs/ai-studio/: design.md  requirements.md  tasks.md
.kiro/steering/: command-guidelines.md  dependency-management.md  development-standards.md  implementation-guidelines.md  project-context.md  project-references.md  testing-guidelines.md
app/: __init__.py  main.py
app/api/: __init__.py
app/api/models/: __init__.py  forms.py  responses.py
app/cli/: __init__.py  commands.py
app/frontend/: __init__.py  app.py
app/frontend/components/: __init__.py  charts.py  plotly_components.py
app/frontend/pages/: __init__.py  developer.py  evaluator.py  user.py
app/mcp/: __init__.py
app/models/: __init__.py  base.py
app/rag/: __init__.py
app/server/: __init__.py  app.py
tests/: __init__.py  test_fastui_structure.py
